# multi-agent-memory-isolation

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml  renovate.json5
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: agent_integration.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
docs/: ARCHITECTURE.md  DEMO.md  DONEPROOF_PAIRING.md  FIELD_LESSONS.md  INCUBATION_PLAN.md  INTEGRATIONS.md  LAUNCH_COPY.md  PRELAUNCH_SCORECARD.md  PUBLISHING_CHECKLIST.md  RELEASE_NOTES.md  SECURITY_MODEL.md
examples/: basic-flow.md
scripts/: prepublish_check.sh  privacy_check.sh
src/agent_memory_isolation/: __init__.py  __main__.py  cli.py  models.py  render.py  store.py  validation.py
src/agent_memory_isolation/schemas/: agent-note.schema.json  policy.schema.json  shared-memory.schema.json
src/agent_memory_isolation/templates/: aider.md  claude.md  cline.md  codex.md  cursor.md  hermes.md  openclaw.md  opencode.md
tests/: test_cli.py  test_project_files.py  test_workflows.py
