[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-memory-isolation"
version = "0.1.0"
description = "Memory isolation and evidence-gated handoffs for Hermes, OpenClaw, Codex, Claude Code, Cursor, and multi-agent AI systems."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Multi-Agent Memory Isolation contributors" }
]
keywords = [
  "ai-agents",
  "agent-memory",
  "agentops",
  "aider",
  "claude-code",
  "codex",
  "context-engineering",
  "cursor",
  "handoff",
  "hermes",
  "memory",
  "multi-agent",
  "openclaw",
  "opencode"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/giugiu-a11y/multi-agent-memory-isolation"
Repository = "https://github.com/giugiu-a11y/multi-agent-memory-isolation"
Issues = "https://github.com/giugiu-a11y/multi-agent-memory-isolation/issues"

[project.optional-dependencies]
dev = [
  "build>=1.4.4",
  "pytest>=9.0.3",
  "ruff>=0.15.16",
  "twine>=6.2.0"
]

[project.scripts]
agent-memory-isolation = "agent_memory_isolation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_memory_isolation = ["templates/*", "schemas/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP006", "UP007"]
